# arc-modape-chain

./: .gitignore  README.md  publish_to_sop.sh  pyproject.toml  setup.cfg  setup.py  wsgi.py
arc_modape_chain/: README.md  arc_modape_chain.py
arc_modape_chain/modape_helper/: __init__.py  modape_helper.py  timeslicing.py
chain/: Somalia.json  arc_modape_chain.py  wsgi.py
chain/test/: chain.sh
config/: development_VIIRS.json  production.example.json
development/reproduce/: Somalia.sh  setup.sh
development/vscode/.devcontainer/: DockerDevStage.template  Dockerfile.template  devcontainer.json  docker-compose.development.yml
docker/: Dockerfile  docker-compose.yml
scripts/FVIIRS2_2507/: Africa.sh  LSO_FVIIRS2_2507_FWD.sh  docker-compose.yml  readme.MD
scripts/MODAPE10_2203/: MODAPE Commands for Arc NDVI.sh  README.md  Somalia.sh  setup.sh
utils/: arc_modape_run.sh  last_collected.py  md5hash.py  modape_calendar.py
