[metadata]
name = arc-modape-chain
version = 1.0.3

[options]
packages =
    arc_modape_chain
package_dir =
    arc_modape_chain = .
install_requires =
    setuptools==57.5.0
    Werkzeug>=2.2,<3.0
    flask==2.0.3
    gdal==3.2.0
    modape==1.2.0

[options.extras_require]
dev =
    isort
    black==21.12b0
    flake8
    coverage
    pytest
    pytest-mock
    pytest-socket
    pytest-cov
    pre-commit

[flake8]
extend-ignore = E203
max-line-length=120
per-file-ignores=__init__.py:F403 F401
